# enadownloader

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE.md  README.md  ena_download.py  enadownloader.py  enadownloader.sh  excel.py  old.py  requirements-test.txt  requirements.txt  setup.cfg  setup.py  sra_ids_test.txt  tox.ini
docs/: gitlab_ci.md
src/enadownloader/: __init__.py  __main__.py  argparser.py  enadownloader.py  enametadata.py  excel.py  pathbuilder.py  utils.py
src/wrapper/: __init__.py
tests/: conftest.py  test_enadownloader.py
tests/enadownloader/: conftest.py  test_enadownloader.py  test_enametadata.py  test_excel.py  test_main.py  test_utils.py
