[metadata]
name = enadownloader
version = 0.0.1

[options]
packages=find:
package_dir=
         =src

install_requires =
    build==0.7.0
    requests==2.27.1
    xmltodict==0.12.0
    black==22.1.0
    xlwt==1.3.0

python_requires = >=3.10

[options.extras_require]
test =
    coverage==5.5
    pytest>=6.2.4
    pytest-cov>=2.12.1
    pytest-mock>=3.7.0
    xlrd==2.0.1

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    enadownloader = wrapper:main
